# city_obj_retrieval

./: .gitignore  CMakeLists.txt  README.md  classes.csv  config.json
application/embeddings/: CMakeLists.txt  main.cpp
application/example/: CMakeLists.txt  main.cpp
application/metrics/: CMakeLists.txt  config.json  embed_config.json  main.cpp  metrics_base.cpp  metrics_base.h
application/segmentation/: CMakeLists.txt  config.json  main.cpp
application/utils/: command_line_utils.h
python_scripts/: Instruction.md  data.py  freeze_graph.py  geo_utils.py  optmize_pb.py  process_database.py  test_matching.py  train_softmax.py  utils.py
python_scripts/aug/: augmentations.py
python_scripts/models/: inception_resnet_v1.py  inception_resnet_v2.py  squeezenet.py
tests/: CMakeLists.txt
tests/commonTests/: CMakeLists.txt  testClassExtraction.cpp  testDataHandling.cpp
tests/embeddingsTests/: CMakeLists.txt  testEmbeddingsBase.cpp
tests/metricsTests/: CMakeLists.txt  testMetricsBase.cpp
tests/segmentationTests/: CMakeLists.txt  testSegmentationBase.cpp
tests/tensorflowTests/: CMakeLists.txt  testExecutionAcceptance.cpp  testTensorflowCorrectness.cpp
tests/test_data/: config.json  sample_config.json  testdatafile.txt
tests/wrapperTests/: CMakeLists.txt  testEmbeddingsBase.cpp  testWrapperBase.cpp
tf_wrapper/: CMakeLists.txt
tf_wrapper/include/tf_wrapper/: embeddings_base.h  embeddings_wrapper.h  inference_handlers.h  interfaces.h  segmentation_base.h  segmentation_wrapper.h  tensorflow_auxiliary.h  tensorflow_base.h  tensorflow_embeddings.h  tensorflow_segmentator.h  tensorflow_wrapper_core.h  wrapper_base.h  wrapper_interfaces.h  wrapper_legacy.h
tf_wrapper/include/tf_wrapper/common/: common_ops.h  fs_handling.h
tf_wrapper/src/: embeddings_base.cpp  embeddings_wrapper.cpp  segmentation_base.cpp  segmentation_wrapper.cpp  tensorflow_auxiliary.cpp  tensorflow_base.cpp  tensorflow_embeddings.cpp  tensorflow_segmentator.cpp  tensorflow_wrapper_core.cpp  wrapper_base.cpp  wrapper_legacy.cpp
tf_wrapper/src/common/: common_ops.cpp  fs_handling.cpp
